Update masthead navs (fix scrollbar, animation, etc)

--- a/src/styles/04.components/masthead.scss
+++ b/src/styles/04.components/masthead.scss
@@ -384,8 +384,8 @@
         overflow: hidden;
         position: absolute;
         right: 0;
-        top: 2.5rem;
-        transition: opacity 0.2s ease, background-color 0.2s ease, top 0.2s ease;
+        top: 4rem;
+        transition: opacity 0.2s ease, background-color 0.2s ease;
         width: 0;
         z-index: 200;
       }
@@ -439,12 +439,11 @@
         .nav_sublist {
           background-color: $white;
           height: auto;
-          max-height: 25rem;
+          max-height: 28rem;
           opacity: 1;
-          overflow: scroll;
+          overflow-y: auto;
           padding: 1rem;
-          top: 4rem;
-          width: 13rem;
+          width: 14rem;
 
           .nav_sublist {
             display: none;
@@ -767,11 +766,11 @@
         background-color: $white;
         height: auto;
         margin-top: 0;
-        max-height: 25rem;
+        max-height: 28rem;
         opacity: 1;
-        overflow: scroll;
+        overflow-y: auto;
         padding: 1rem;
-        width: 13rem;
+        width: 14rem;
 
         .nav_sublist {
           display: none;
